--- a/popup.html
+++ b/popup.html
@@ -1,28 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WA Header Bar</title>
   <link rel="stylesheet" href="popup.css">
-
 </head>
 <body>
-
-  <div class="top-header-bar">
-    <div class="profile-placeholder">A</div>
-    <button class="logout-btn">Logout</button>
-  </div>
-  
-  <div class="header-bar">
-    <button class="header-btn" id="all">All</button>
-    <button class="header-btn" id="unread">Unread</button>
-    <button class="header-btn" id="dashboard">Dashboard</button>
-    <button class="header-btn" id="tickets">Tickets</button>
-    <button class="header-btn" id="settings">Settings</button>
-    <button class="header-btn" id="flags">Flags</button>
-  </div>
-  
-  <script src="popup.js"></script>
+  <!-- Extension popup content reverted, logout button removed -->
 </body>
 </html> 
